--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -590,3 +590,5 @@ It is a long article, so let's gather all the recommendations in one place:
 17. Use Column names that suggest the data type [🔗](#meaningful-column-names)
 
 If you want to share something I'm missing or have arguments for a different recommendation - [let me know](https://www.linkedin.com/in/mateusz-dabrowski-marketing/).
+
+Looking for even more Marketing Cloud style? Check out my [SSJS Style Guide](../ssjs/ssjs-style-guide.mdx).
