--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -23,11 +23,43 @@ First things first: this Salesforce Marketing Cloud SSJS style guide is highly s
 
 Everything else is preference. And you are just about to learn about mine.
 
-## Letter Case
+## Naming Convention
 
-SSJS gives you a lot of freedom when it comes to letter case. But instead of going freestyle with that flexibility, we should leverage it to build something meaningful and readable. I decided to focus also on simplicity.
+SSJS gives you a lot of freedom when it comes to naming and letter case. But instead of going freestyle with that flexibility, we should leverage it to build something meaningful and readable. I decided to focus also on simplicity.
 
-### JS Variables, Functions & Methods Case
+### Meaningful Names
+
+__Use names that suggest the purpose.__
+
+#### Variable Names
+
+1. Use descriptive variable names. It is better to have a long explicit one (`isTrackingSuppressed`) than a short mysterious abbreviation (`trk`).
+2. When the variable is a boolean, prefix it with `is` (or `has`/`does`/`are` depending on the underlying data).
+3. When the variable is a date, suffix it with `Date`.
+4. When the variable is
+
+```js
+/* ✅ descriptive and suggesting boolean data type */
+var isTrackingSuppressed = false;
+
+/* ❌ name neither describes the variable purpose nor suggest its data type*/
+var value = false;
+
+/* ✅ descriptive and suggesting boolean data type */
+var trackingSupressionStartDate = new Date();
+
+/* ❌ name neither describes the variable purpose nor suggest its data type*/
+var supressed = new Date();
+```
+
+#### Function Names
+
+1. Use descriptive function names. It is better to have a long explicit one (`getEmailAddress`) than a short mysterious abbreviation (`geteml`).
+2. Always use a verb (`get`, `post`, `update`, `send`) as a first part of the name to tell what the function is doing.
+
+TODO
+
+### JS Variables, Functions & Methods Leter Case
 
 __Use `camelCase` for all elements of JS syntax.__
 
@@ -49,7 +81,13 @@ function FunctionName(variableName) {
 };
 ```
 
-### SSJS Functions Case
+:::note You Should Know
+
+JavaScript variables are case sensitive. `Name` and `name` are two different variables that can have different values, so it's critically important to have a stable convention.
+
+:::
+
+### SSJS Functions Letter Case
 
 __Use `PascalCase` for all elements of SSJS syntax.__
 
