Updated draft of SSJS Style Guide

--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -591,4 +591,4 @@ It is a long article, so let's gather all the recommendations in one place:
 
 If you want to share something I'm missing or have arguments for a different recommendation - [let me know](https://www.linkedin.com/in/mateusz-dabrowski-marketing/).
 
-Looking for even more Marketing Cloud style? Check out my [SSJS Style Guide](../ssjs/ssjs-style-guide.mdx).
+Looking for more Marketing Cloud style? Check out my [SSJS Style Guide](../ssjs/ssjs-style-guide.mdx).
